# MIPSimu

./: .gitignore  CMakeLists.txt  README.md  elf2bin
config/: README.md  double-ram.json  simple.json
docs/: instructions.md  peripherals.md
src/: main.cc
src/app/: keyboard.cc  keyboard.h  mainwindow.cc  mainwindow.h  memoryloader.cc  memoryloader.h  screen.cc  system.cc  system.h
src/core/: bus.cc  bus.h  debug.h  disassembler.cc  disassembler.h  processor.cc  processor.h
src/debugger/: debugger.h  peripheral.cc  peripheral.h
src/debugger/asm/: disassembler.cc  disassembler.h  inst_dump.cc  inst_dump.h
src/js-app/: CMakeLists.txt  CMakelists.txt  main.cc
src/js-app/html/: index.html  mipsimu-options.js  mipsimu-wrapper.js  style.css
src/js-app/js/: mipsimu-wrapper.js
src/js-app/system/: system.cc  system.h
src/native-app/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h
src/native-app/system/: memoryloader.cc  memoryloader.h  system.cc  system.h  sysworker.cc  sysworker.h
src/peripherals/: external.cc  external.h  ram.cc  ram.h  timer.cc  timer.h  vga.cc  vga.h
src/utils/: range.h
tests/: Makefile  README.md  led-chase.c  squares.c
tests/assets/: ldscript.ld  start.s
unittests/: CMakeLists.txt  test_core_bus.cc  test_core_disassembler.cc  test_core_processor.cc  test_debug_instdump.cc
